<resources>
    <string name="app_name">Mitosys</string>
    <string name="mitosys">Mitosys</string>
    <string name="logo">logo</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="status">Status</string>
    <string name="profilephoto">profilePhoto</string>
    <string name="sampleName">Name: User Name</string>
    <string name="sampleAge">Age: 10</string>
    <string name="sampleDOB">DOB: 04/20/2012</string>
    <string name="sampleStatus">Due</string>
    <string name="information">Information</string>
    <string name="amount_left">Amount Left</string>
    <string name="sampleAmountLeft">Rs.6900</string>
    <string name="due_date">Due Date</string>
    <string name="sampleDate">6th September, 2022</string>
    <string name="days_left">Days Left</string>
    <string name="sampleDaysLeft">55 days</string>
    <string name="due_status">Due Status</string>
    <string name="sampleDue">Due</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="download_pdf">Download PDF</string>
    <string name="quit">Quit</string>
    <string name="username">Username</string>
    <string name="payment_details">Payment Details</string>
    <string name="save_details">Save Details</string>
    <string name="speech_therapy">Speech Therapy</string>
    <string name="therapy">Therapy</string>
    <string name="transportation">Transportation</string>
    <string name="admission_charge">Admission Charge</string>
    <string name="sampleAmt">Rs. 0</string>
    <string name="monthly_charge">Monthly Charge</string>
    <string name="snacks">Snacks</string>
    <string name="back_icon">back icon</string>
    <string name="log_out">Log Out</string>
    <string name="tuition">Tuition</string>
    <string name="made_and_gifted_by">Made and Gifted by</string>
    <string name="prashannar">PrashannaR</string>
</resources>